Created template for dataflow analysis inspections

--- a/scala/scala-impl/resources/messages/ScalaInspectionBundle.properties
+++ b/scala/scala-impl/resources/messages/ScalaInspectionBundle.properties
@@ -148,6 +148,9 @@ displayname.missing.tag.parameter.description=Missing tag parameter description
 displayname.wrong.scaladoc.element=Wrong scaladoc element
 displayname.specs2.matchers=Specs2 matchers
 displayname.source3.scala2.syntax=Scala 2 syntax with -Xsource:3
+displayname.constant.conditions=Constant conditions
+displayname.condition.always.true=Condition is always true
+displayname.condition.always.false=Condition is always false
 final.modifier.is.redundant.for.toplevel.objects='final' modifier is redundant for toplevel objects
 mark.inner.case.objects.as.final=Mark inner case objects as final
 group.general=General
@@ -156,6 +159,7 @@ group.syntactic.simplification=Syntactic simplification
 group.syntactic.clarification=Syntactic clarification
 group.method.signature=Method signature
 group.code.style=Code style
+group.dataflow.analysis=Dataflow analysis
 group.size=Size
 group.comparing=Comparing
 group.indices=Indices
